--- a/style.css
+++ b/style.css
@@ -1,82 +1,86 @@
-*{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    font-size: 10px;
-    background-color: #444;
-    height: 100vh;
-    font-family: Helvetica, Arial, sans-serif;
-}
-
-body, .container,.colors,.inputs{
-    display:flex;
-    align-items: center;
-    justify-content: center;
+body {
+  font-size: 10px;
+  background-color: #444;
+  height: 100vh;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-.container,.colors{
-    flex-direction: column;
-    border-radius: 3px;
+body,
+.container,
+.colors,
+.inputs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.container{
-    background-color: #ebebeb;
-   
-    max-width: 800px;
-    padding: 2rem;
-    row-gap: 2rem;
+.container,
+.colors {
+  flex-direction: column;
+  border-radius: 3px;
 }
 
-.inputs{
-    column-gap: 1rem;
+.container {
+  background-color: #ebebeb;
+
+  max-width: 800px;
+  padding: 2rem;
+  row-gap: 2rem;
 }
 
-.color-input{
-    padding: .5rem;
-    color: #777;
-    border-style:solid;
-    border-color:#aaa;
-    border:none;    
+.inputs {
+  column-gap: 1rem;
 }
 
-.color-input::placeholder{
-    color: #bbb;
+.color-input {
+  padding: 0.5rem;
+  color: #777;
+  border-style: solid;
+  border-color: #aaa;
+  border: none;
+}
+
+.color-input::placeholder {
+  color: #bbb;
 }
 
 .color-label {
-    font-size: 1.6rem;
-    margin:auto 0;
-    font-weight: regular;
-    color:#555;
-    margin: 1rem 0;
+  font-size: 1.6rem;
+  margin: auto 0;
+  font-weight: regular;
+  color: #555;
+  margin: 0.7rem 0;
 }
 
-.btn,btn:active{
-    padding: 1rem 2rem;
-    font-size: 1rem;
-    background-color: #333;
-    color:#fff;
-    border:none;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.4);
-    transition:all .3s;
+.btn,
+btn:active {
+  padding: 1rem 2rem;
+  font-size: 1rem;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s;
 }
 
 .btn:hover {
-    background-color: #555;
-    transform: translateY(-3px);
-    box-shadow: 2px 4px 8px rgba(0,0,0,.4);
+  background-color: #555;
+  transform: translateY(-3px);
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
 .btn:active {
-    background-color: #444;
-    transform: translateY(-2px);
+  background-color: #444;
+  transform: translateY(-2px);
 }
 
-.message{
-    display:none;
-    font-size: 1.2rem;
-    
+.message {
+  display: none;
+  font-size: 1.2rem;
 }
